project2/tests/reject/0-twc-bad.cc
int main() {
  int a = true <=> 3.14;
}